@startuml

title Observer Pattern

interface Subject{
  observers : Observer[]
  registerObserver(Observer)
  removeObserver(Observer)
  notifyObservers()
}


interface Observer{
  update()
}

class WeatherData{
  registerObserver(Observer){}
  removeObserver(Observer){}
}

class Screen{
  update(){}
}

Subject <|.. WeatherData

Observer <|.. Screen


@enduml